# epiScanpy

./: .editorconfig  .gitattributes  .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  README.rst  _version.py  conf.py  environment.yml  environment_windows.yml  index.md  make.bat  pytest.ini  requirements.txt  setup.cfg  setup.py  versioneer.py  ~:.pypirc
.github/workflows/: os_mac.yml  os_mac_bigsur.yml  os_ubuntu.yml  os_windows.yml  python-package-conda-windows.yml  python-package-conda.yml  python-package.yml  python-publish.yml  python27-package.yml  python36-package.yml  python37-package.yml  python38-package.yml  python39-package.yml
docs/: Makefile  System_Requirements.rst  Systems_Requirements.rst  basic_usage.rst  conf.py  examples.rst  foo.txt  index.rst  installation.rst  make.bat  references.rst  release_notes.rst  requirements.txt  scanpy_confpy
docs/api/: Episcanpy.api.rst  episcanpy.function.rst  episcanpy.plotting.rst  index.rst  plotting.rst
docs/source/: Tutorials.rst  Workflow.rst  conf.py  index.rst  installation.rst  license.rst
docs/tutorials/: ATAC_bld_ct_mtx_tutorial.html  Tutorial-preprocessing_ATAC_cusanovich.html  Tutorial_building_custom_count_matrices_from_tsv_or_cellranger_outputs.html  Tutorial_building_custom_count_matrices_from_tsv_or_cellranger_outputs.ipynb  bld_count_matrix_methylation_tutorial.html  (+3 more)
episcanpy/: __init__.py  _compat.py  _multidata.py  _settings.py  _version.py  logging.py  settings.py  utils.py  version.py
episcanpy/api/: ct.py  (+8 more)
tests/: test_dummy.py  test_loading_episcanpy.py  test_time.py
(+104 files in other folders)
