[versioneer]
VCS = git
style = pep440
versionfile_source = episcanpy/_version.py
versionfile_build = episcanpy/_version.py
tag_prefix =
parentdir_prefix = episcanpy-

[build_ext]
inplace=1

[metadata]
description-file = README.rst

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths = tests
python_files = test_*.py
xfail_strict = true
